@@ -1,0 +1,12 @@
+<h1>Mail Server Setup</h1>
+
+<p>
+If you want to use a GMail account with Integria mailing services you must configure the SMTP server as follows:
+<br><pre>
+    SMTP Host: ssl://smtp.gmail.com
+    SMTP Port: 465
+    SMTP User: yourmail@gmail.com
+    SMPT Passowrd: your_password 
+</pre>
+
+</p>
