@@ -1,0 +1,12 @@
+<h1>Configuración del servidor de correo</h1>
+
+<p>
+Si quiere usar un servidor que utilice SSL, configurelo de la siguiente manera:
+<br><pre>
+    SMTP Host: ssl://smtp.gmail.com
+    SMTP Port: 465
+    SMTP User: yourmail@gmail.com
+    SMPT Passowrd: su password
+</pre>
+
+</p>
