@@ -1,3 +1,10 @@
+2012-03-07  Sancho Lerena <slerena@artica.es>
+
+	* godmode/setup/setup_mail.php: Added help link.
+
+	* include/help/en/help_mailsetup.php
+	include/help/es/help_mailsetup.php: New help files for mail setup.
+
 2012-03-07 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* godmode/setup/setup_mail.php: Added support to configure
